[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
hashbrown = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"

[dev-dependencies]
tempfile = "3.3"
